RESOLVED FIXED22917
break out text selection on initial focus as separate feature
https://bugs.webkit.org/show_bug.cgi?id=22917
Summary break out text selection on initial focus as separate feature
Cary Clark
Reported 2008-12-18 09:42:10 PST
Focusing on a textarea sets the caret at the beginning of the selection. The ANDROID platform user interface guidelines requires selecting all when focusing on a textarea. I'd like a compile-time flag to select this behavior.
Attachments
patch to allow selecting all text on initial focus of text area (3.04 KB, patch)
2008-12-18 09:45 PST, Cary Clark
darin: review+
patch to allow selecting all text on initial focus of text area (3.10 KB, patch)
2009-01-05 08:31 PST, Cary Clark
eric: review+
Cary Clark
Comment 1 2008-12-18 09:45:47 PST
Created attachment 26122 [details] patch to allow selecting all text on initial focus of text area
Darin Adler
Comment 2 2009-01-02 11:11:58 PST
Comment on attachment 26122 [details] patch to allow selecting all text on initial focus of text area > +#if !defined(ON_FIRST_TEXTAREA_FOCUS_SELECT_ALL) > +#define ENABLE_ON_FIRST_TEXTAREA_FOCUS_SELECT_ALL 0 > +#endif Seems slightly excessive to control this with Platform.h, but I suppose we can refactor this when we refactor Platform.h in the future. > + WARNING: NO TEST CASES ADDED OR CHANGED Please remove this line from the ChangeLog. The warning is to you, the person writing the ChangeLog, and shouldn't be checked in. The ChangeLog should include the URL of this bug report. r=me
Cary Clark
Comment 3 2009-01-05 08:31:20 PST
Created attachment 26431 [details] patch to allow selecting all text on initial focus of text area removed WARNING from WebCore ChangeLog; added bug URLs to both ChangeLogs
Eric Seidel (no email)
Comment 4 2009-01-06 14:06:24 PST
Comment on attachment 26431 [details] patch to allow selecting all text on initial focus of text area You seem to have addressed darin's comments, and this otherwise looks fine.
Eric Seidel (no email)
Comment 5 2009-02-04 16:00:12 PST
Your defined() check did not match what you were defining. But I fixed the check to ENABLE_ON_FIRST_TEXTAREA_FOCUS_SELECT_ALL when landing. I'm surprised this patch worked for you.
Eric Seidel (no email)
Comment 6 2009-02-04 16:28:15 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ... M JavaScriptCore/wtf/Platform.h M WebCore/ChangeLog M WebCore/html/HTMLTextAreaElement.cpp Committed r40645
Eric Seidel (no email)
Comment 7 2009-02-04 17:27:11 PST
Patch was wrong. Fixed: Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/dom/Element.cpp Committed r40654
Eric Seidel (no email)
Comment 8 2009-02-04 17:28:22 PST
Sorry, that was destined for bug 23163.
Note You need to log in before you can comment on or make changes to this bug.